Fix text size to remove results scrollbar
It displayed for several longer descriptions

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -337,9 +337,8 @@ button {
 	top: 150px;
 	position: relative;
 	box-sizing: border-box;
-	font-size: 25px;
+	font-size: 24px;
 	color: white;
-	overflow-y: auto;
 }
 
 #shareResultsButton {
